The editors get an artifact that can see them, and it finds a shuffled list on its first run
docs/panel-layout.txt is to the class editors what counts.tsv is to generation: what
they put on screen, in order, with the pieces they are assembled from named and every
disabled control marked. A change to a panel is a diff of that file before it is
anything else, and PanelLayoutIsCheckedInTest fails until the diff is read and
accepted with -Dpanel.layout.write=true.

It exists because nothing else in the suite can perceive what these editors are
designed around. 1931 tests passed while the triple sat seventh on the source editor
and last on the owned one, while one component carried two different titles, and while
"one shared component" was three implementations behind a CardLayout. Directive 15
states the rule; this file is its instrument, and the drawing in
configuration-panels-as-they-are.md is now generated rather than written by hand.

Its first run found a defect. CanonicalizationPlan copied its per-field reductions
with Map.copyOf, which is immutable AND randomizes iteration order per JVM — so the
identity editor's "When the same key occurs" rows came out in a different order on
every launch, and any report walking that map read differently each run. It is the
same fault the model store fixed for serialization. The map keeps the order it is
given, which is the class's field order.

What the file records today is not what we agreed: source is header/role-list/triple/
display/identity, statement is header/triple/identity/display, owned is header/display/
triple with no identity piece at all, and aggregate has no triple. That is the baseline
the unification is measured against, not an endorsement of it.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>